<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:key="MEDIA_BUTTON_WAIT" android:numeric="integer" android:title="@string/label_media_button_wait_title" android:summary="@string/label_media_button_wait_summary" android:defaultValue="650" />
    <EditTextPreference android:key="SILENCE_INTENSITY_THRESHOLD" android:numeric="integer" android:title="@string/label_silence_threshold_title" android:summary="@string/label_silence_threshold_summary" android:defaultValue="1000" />
    <EditTextPreference android:key="SILENCE_DURATION_THRESHOLD" android:numeric="integer" android:title="@string/label_silence_duration_threshold_title" android:summary="@string/label_silence_duration_threshold_summary" android:defaultValue="10" />
</PreferenceScreen>